# janggab

./: Cargo.toml  README.md
crates/janggab/: Cargo.toml  README.md
crates/janggab-core/: Cargo.toml  LICENSE  README.md
crates/janggab-core/src/: lib.rs
crates/janggab-core/src/based/tcp/: client.rs  mod.rs  server.rs
crates/janggab-core/src/based/udp/: client.rs  server.rs
crates/janggab-core/src/get_webcam/tcp/: client.rs  server.rs
crates/janggab-core/src/get_webcam/udp/: client.rs  server.rs
crates/janggab-setup/: Cargo.toml  README.md
crates/janggab-setup/src/: lib.rs  tools.rs
crates/janggab-setup/src/games/: mod.rs
crates/janggab-setup/src/install_rust_wsl/: mod.rs
crates/janggab-setup/src/make_server/: mod.rs
crates/janggab-setup/src/opencv/: install_with_choco.rs  mod.rs  set_opencv_dir.rs  set_opencv_to_bin.rs
crates/janggab/src/: lib.rs
crates/janggab/src/webcam/: mod.rs
examples/howtodo-getmic/: Cargo.toml
examples/howtodo-setup/: Cargo.toml
examples/howtodo-setup/examples/: setup_main.rs
examples/howtodo-usejanggab/: Cargo.toml
examples/howtodo-usejanggab/examples/: windows_part.rs  wsl_part.rs
