[workspace]
members = [
    "crates/*", "examples/howtodo-setup", "examples/howtodo-usejanggab", 
]

[workspace.package]
repository = "https://github.com/boggle200/janggab.git"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"

